--- a/Hausautomation/Pages/SettingsPage.xaml
+++ b/Hausautomation/Pages/SettingsPage.xaml
@@ -9,22 +9,23 @@
 
     <!--<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">-->
     <Grid Background="#FFB4BBFF">
-            <TextBlock HorizontalAlignment="Left" Margin="10,16,0,0" Text="HomeMatic IP:" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,16,0,0" Text="HomeMatic IP:" VerticalAlignment="Top"/>
         <TextBox x:Name="tbHMIP" HorizontalAlignment="Left" Height="20" Margin="120,10,0,0" Text="192.168.178.15" VerticalAlignment="Top" Width="145" TextChanged="tbHMIP_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="300,16,0,0" Text="Port:" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbHMPO" HorizontalAlignment="Left" Height="20" Margin="340,10,0,0" Text="2010" VerticalAlignment="Top" Width="64" TextChanged="tbHMPO_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="280,16,0,0" Text="Port:" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbHMPO" HorizontalAlignment="Left" Height="20" Margin="320,10,0,0" Text="80" VerticalAlignment="Top" Width="64" TextChanged="tbHMPO_TextChanged"/>
+        <CheckBox x:Name="cbOnline" Content="Online" HorizontalAlignment="Left" Margin="396,10,0,0" VerticalAlignment="Top" Click="cbOnline_Click" MinWidth="80"/>
 
         <TextBlock HorizontalAlignment="Left" Margin="10,276,0,0" Text="SMTPServer" VerticalAlignment="Top"/>
-        <TextBox x:Name="SMTPServer" HorizontalAlignment="Left" Height="20" Margin="95,270,0,0" Text="smtp.server.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPServer_TextChanged"/>
+        <TextBox x:Name="tbSMTPServer" HorizontalAlignment="Left" Height="20" Margin="95,270,0,0" Text="smtp.server.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPServer_TextChanged"/>
         <TextBlock HorizontalAlignment="Left" Margin="255,276,0,0" Text="Port" VerticalAlignment="Top"/>
-        <TextBox x:Name="SMTPPort" HorizontalAlignment="Left" Height="20" Margin="290,270,0,0" Text="25" VerticalAlignment="Top" TextChanged="tbSMTPPort_TextChanged"/>
-        <CheckBox x:Name="SSL" Content="SSL" HorizontalAlignment="Left" Margin="396,270,0,0" VerticalAlignment="Top" Click="cbSSL_Click" MinWidth="60"/>
+        <TextBox x:Name="tbSMTPPort" HorizontalAlignment="Left" Height="20" Margin="290,270,0,0" Text="25" VerticalAlignment="Top" TextChanged="tbSMTPPort_TextChanged"/>
+        <CheckBox x:Name="cbSSL" Content="SSL" HorizontalAlignment="Left" Margin="396,270,0,0" VerticalAlignment="Top" Click="cbSSL_Click" MinWidth="60"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,307,0,0" Text="SMTPName" VerticalAlignment="Top"/>
-        <TextBox x:Name="SMTPName" HorizontalAlignment="Left" Height="20" Margin="95,300,0,0" Text="email@host.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPName_TextChanged"/>
+        <TextBox x:Name="tbSMTPName" HorizontalAlignment="Left" Height="20" Margin="95,300,0,0" Text="email@host.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPName_TextChanged"/>
         <TextBlock HorizontalAlignment="Left" Margin="255,306,0,0" Text="Pass" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="SMTPPass" HorizontalAlignment="Left" Height="20" Margin="290,300,0,0" PlaceholderText="Password" VerticalAlignment="Top" Width="140" PasswordChanged="pbSMTPPass_TextChanged"/>
+        <PasswordBox x:Name="pbSMTPPass" HorizontalAlignment="Left" Height="20" Margin="290,300,0,0" PlaceholderText="Password" VerticalAlignment="Top" Width="140" PasswordChanged="pbSMTPPass_TextChanged"/>
         <Button Content="Send Test Email" HorizontalAlignment="Left" Margin="95,333,0,0" VerticalAlignment="Top" Width="144" Click="btTestEmail_Button_Click"/>
-        <CheckBox x:Name="AUT" Content="Authentification" HorizontalAlignment="Left" Margin="290,333,0,0" VerticalAlignment="Top" Click="cbAUT_Click"/>
+        <CheckBox x:Name="cbAUT" Content="Authentification" HorizontalAlignment="Left" Margin="290,333,0,0" VerticalAlignment="Top" Click="cbAUT_Click"/>
 
     </Grid>
 </Page>
