--- a/Hausautomation/Pages/SamplePage1.xaml
+++ b/Hausautomation/Pages/SamplePage1.xaml
@@ -28,9 +28,9 @@
                        Margin="12" />
 
         <ListView x:Name="ItemsListView" Grid.Row="2" 
-                  ItemsSource="{x:Bind _items}" 
+                  ItemsSource="{x:Bind Devicelist}" 
                   IsItemClickEnabled="True" 
-                  SelectionMode="Multiple" >
+                  SelectionMode="Multiple" ItemClick="ItemsListView_ItemClick" >
             <!--ContainerContentChanging="ItemsListView_ContainerContentChanging"
                   ItemClick="ItemsListView_ItemClick">-->
             <ListView.ItemTemplate>
@@ -52,22 +52,38 @@
                                 Orientation="Vertical" TickFrequency="10" Margin="24,24,24,24" Height="150"
                                 TickPlacement="Outside"
                                 Value="{x:Bind iSlider1}"
-                                Visibility="{x:Bind bSlider1, Mode=OneWay}" />
+                                Visibility="{x:Bind bSlider1, Mode=OneWay}" ValueChanged="slSlider1_ValueChanged" />
                         <Button x:Name="btButton1"
                                 RelativePanel.RightOf="tbTextblock1"
                                 Margin="27,60,24,24" Content="Ein"
-                                Visibility="{x:Bind bButton1, Mode=OneWay}"/>
+                                Visibility="{x:Bind bButton1, Mode=OneWay}" Click="btButton1_Click"/>
                         <Button x:Name="btButton2"
                                 RelativePanel.RightOf="tbTextblock1"
                                 Margin="25,110,24,24" Content="Aus"
-                                Visibility="{x:Bind bButton1, Mode=OneWay}"/>
+                                Visibility="{x:Bind bButton1, Mode=OneWay}" Click="btButton2_Click"/>
+                        <Button x:Name="btButtonOb"
+                                RelativePanel.RightOf="tbTextblock1"
+                                Margin="40,40,15,24" Content="O"
+                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonOb_Click"/>
+                        <Button x:Name="btButtonUn"
+                                RelativePanel.RightOf="tbTextblock1"
+                                Margin="40,130,15,24" Content="U"
+                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonUn_Click"/>
+                        <Button x:Name="btButtonLi"
+                                RelativePanel.RightOf="tbTextblock1"
+                                Margin="15,85,15,24" Content="L"
+                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonLi_Click"/>
+                        <Button x:Name="btButtonRe"
+                                RelativePanel.RightOf="tbTextblock1"
+                                Margin="65,85,15,24" Content="R"
+                                Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonRe_Click"/>
                         <ToggleSwitch x:Name="tgSwitch1"
                                 Margin="20,145,-100,24" 
                                 RelativePanel.RightOf="tbTextblock1"
                                 OffContent="Aus"
                                 OnContent="Ein"
                                 IsOn="{x:Bind bSwitch1State}"
-                                Visibility="{x:Bind bSwitch1, Mode=OneWay}">
+                                Visibility="{x:Bind bSwitch1, Mode=OneWay}" Toggled="tgSwitch1_Toggled">
                         <ToggleSwitch.RenderTransform>
                         <CompositeTransform Rotation="-90"/>
                         </ToggleSwitch.RenderTransform>
@@ -78,7 +94,7 @@
                                 OffContent="Aus"
                                 OnContent="Ein"
                                 IsOn="{x:Bind bSwitch2State}"
-                                Visibility="{x:Bind bSwitch2, Mode=OneWay}">
+                                Visibility="{x:Bind bSwitch2, Mode=OneWay}" Toggled="tgSwitch2_Toggled">
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
@@ -107,6 +123,12 @@
                                    Margin="24,24,24,24" 
                                    Text="{x:Bind Textblock5}" 
                                    Visibility="{x:Bind bTextblock5, Mode=OneWay}" />
+                        <TextBlock x:Name="tbTextblock6" 
+                                   RelativePanel.RightOf="btButtonRe"
+                                   Style="{ThemeResource BaseTextBlockStyle}"
+                                   Margin="24,24,24,24" 
+                                   Text="{x:Bind Textblock6, Mode=TwoWay}" 
+                                   Visibility="{x:Bind bTextblock6, Mode=OneWay}" />
                     </RelativePanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
