--- a/Hausautomation/Pages/SamplePage2.xaml
+++ b/Hausautomation/Pages/SamplePage2.xaml
@@ -8,7 +8,27 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock HorizontalAlignment="Left" Margin="120,120,0,0" Text="TextBlock2" TextWrapping="Wrap" VerticalAlignment="Top"/>
+
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0"
+                       Text="Alle Geräte"
+                       VerticalAlignment="Top"
+                       Style="{ThemeResource TitleTextBlockStyle}"
+                       Margin="12" />
+
+        <TextBlock Grid.Row="1"
+                   Style="{ThemeResource BodyTextBlockStyle}"
+                   Text="Klicke auf die Listeneinträge um sie als Favoriten zu markieren"
+                       Margin="12" />
+
+
+        <TextBlock HorizontalAlignment="Left" Margin="184,204,0,-224" Text="TextBlock2" TextWrapping="Wrap" VerticalAlignment="Top" Grid.RowSpan="3"/>
 
     </Grid>
 </Page>
