--- a/Hausautomation/Pages/PageAll.xaml
+++ b/Hausautomation/Pages/PageAll.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Hausautomation.Pages.SamplePage1"
+    x:Class="Hausautomation.Pages.PageAll"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hausautomation.Pages"
