--- a/Hausautomation/Pages/PageFav.xaml
+++ b/Hausautomation/Pages/PageFav.xaml
@@ -9,26 +9,18 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0"
-                       Text="Alle Geräte"
-                       VerticalAlignment="Top"
-                       Style="{ThemeResource TitleTextBlockStyle}"
-                       Margin="12" />
+        <TextBlock Grid.Row="0" Text="Alle Geräte" VerticalAlignment="Top" Style="{ThemeResource TitleTextBlockStyle}" Margin="12"/>
 
-        <TextBlock Grid.Row="1"
-                   Style="{ThemeResource BodyTextBlockStyle}"
-                   Text="Klicke auf die Listeneinträge um sie als Favoriten zu markieren"
-                       Margin="12" />
+        <TextBlock Grid.Row="1" Text="Klicke auf die Listeneinträge um sie als Favoriten zu markieren" Style="{ThemeResource BodyTextBlockStyle}" Margin="12"/>
 
-
-        <TextBlock HorizontalAlignment="Left" Margin="184,204,0,-224" Text="PageFav" TextWrapping="Wrap" VerticalAlignment="Top" Grid.RowSpan="3"/>
+        <TextBlock Grid.Row="2" HorizontalAlignment="Left" Margin="184,204,0,-224" Text="PageFav" TextWrapping="Wrap" VerticalAlignment="Top"/>
 
     </Grid>
+    
 </Page>
