--- a/Hausautomation/MainPage.xaml
+++ b/Hausautomation/MainPage.xaml
@@ -7,35 +7,24 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-
-
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-
-        <NavigationView Loaded="NavigationView_Loaded" Grid.Row="1" SelectionChanged="NavigationView_SelectionChanged"
-         x:Name="nvSample" IsSettingsVisible="{Binding ElementName=settingsCheck,Path=IsChecked}" IsTabStop="False" Header="Das ist die Willkommens Seite">
+        <NavigationView x:Name="nvSample" Loaded="NavigationView_Loaded" Grid.Row="1" SelectionChanged="NavigationView_SelectionChanged"
+                        IsSettingsVisible="{Binding ElementName=settingsCheck,Path=IsChecked}" IsTabStop="False" Header="Das ist die Willkommens Seite">
             <NavigationView.MenuItems>
                 <!--<NavigationViewItemSeparator/>
                 <NavigationViewItemSeparator/>-->
-                <AutoSuggestBox x:Name="ASB" QueryIcon="Find" Width="290" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}" />
-                <NavigationViewItemHeader Content="Hauptseite" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}" />
-                <NavigationViewItem Icon="AllApps" Content="Alle Geräte" Tag="PageAll" />
-                <NavigationViewItemHeader Content="Unterseiten" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}" />
-                <NavigationViewItem Icon="Favorite" Content="Favoriten" Tag="PageFav" />
-                <NavigationViewItem Icon="Home" Content="Räume" Tag="PageRoom" />
-                <NavigationViewItem Icon="MapDrive" Content="Gewerke" Tag="PageFunc" />
-                <NavigationViewItemHeader Content="Hilfe" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}" />
-                <NavigationViewItem Icon="Help" Content="Hilfe" Tag="MainPageHeader" />
+                <AutoSuggestBox x:Name="asbSuche" QueryIcon="Find" Width="290" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}"/>
+                <NavigationViewItemHeader Content="Hauptseite" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}"/>
+                <NavigationViewItem Icon="AllApps" Content="Alle Geräte" Tag="PageAll"/>
+                <NavigationViewItemHeader Content="Unterseiten" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}"/>
+                <NavigationViewItem Icon="Favorite" Content="Favoriten" Tag="PageFav"/>
+                <NavigationViewItem Icon="Home" Content="Räume" Tag="PageRoom"/>
+                <NavigationViewItem Icon="MapDrive" Content="Gewerke" Tag="PageFunc"/>
+                <NavigationViewItemHeader Content="Hilfe" Visibility="{x:Bind nvSample.IsPaneOpen, Mode=OneWay}"/>
+                <NavigationViewItem Icon="Help" Content="Hilfe" Tag="MainPageHeader"/>
             </NavigationView.MenuItems>
-
-
-
-
-
             <Frame x:Name="contentFrame">
-
-
-
                 <Frame.ContentTransitions>
                     <TransitionCollection>
                         <NavigationThemeTransition>
@@ -45,12 +34,9 @@
                         </NavigationThemeTransition>
                     </TransitionCollection>
                 </Frame.ContentTransitions>
-
-
-
             </Frame>
         </NavigationView>
-        <!--<CheckBox Content="Show Settings button" x:Name="settingsCheck" />-->
+        
     </Grid>
 
 </Page>
